test/parsing/vass/wrong-escapes-2.good
wrong-escapes-2.chpl:3: syntax error: near 'DONE'
wrong-escapes-2.chpl:3: error: end-of-line in a string literal without a preceding backslash
wrong-escapes-2.chpl:3: error: EOF in string
